[package]
name = "limit-stream-derive"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"
limit-stream = { git="https://github.com/limitstream/limit-stream", version="0.1.0" }

[dev-dependencies]
limit-stream-runtime = { git="https://github.com/limitstream/limit-stream-runtime", version="0.1.0" }